code/HADAD-base/src/main/java/hadad/base/compiler/model/xq/XQueryParser.java
// Generated from XQuery.g4 by ANTLR 4.5.3

package hadad.base.compiler.model.xq;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, ALPHA=28, BETA=29, WS=30;
	public static final int
		RULE_xquery = 0, RULE_viewName = 1, RULE_openRootTag = 2, RULE_closeRootTag = 3, 
		RULE_construct = 4, RULE_constructEmptyTag = 5, RULE_constructString = 6, 
		RULE_constructVar = 7, RULE_constructFlwr = 8, RULE_constructFlwrTerm = 9, 
		RULE_constructDelimeter = 10, RULE_constructFlwrOpenTag = 11, RULE_constructFlwrCloseTag = 12, 
		RULE_tag = 13, RULE_mkattr = 14, RULE_mkattrName = 15, RULE_string = 16, 
		RULE_name = 17, RULE_aterm = 18, RULE_atermVar = 19, RULE_atermString = 20, 
		RULE_var = 21, RULE_flwr = 22, RULE_flwrFor = 23, RULE_flwrWhere = 24, 
		RULE_flwrReturn = 25, RULE_flwrForWhere = 26, RULE_flwrForVar = 27, RULE_flwrForP = 28, 
		RULE_flwrWhereCond = 29, RULE_flwrWhereCondSome = 30, RULE_flwrWhereCondVar = 31, 
		RULE_flwrWhereCondAp = 32, RULE_flwrWhereCondEquality = 33, RULE_flwrWhereCondEqualityLeftTerm = 34, 
		RULE_flwrWhereCondEqualityRightTerm = 35, RULE_cterm = 36, RULE_ctermAp = 37, 
		RULE_ctermVar = 38, RULE_ctermString = 39, RULE_flwrReturnVar = 40, RULE_flwrReturnString = 41, 
		RULE_flwrReturnConstruct = 42, RULE_rp = 43, RULE_child = 44, RULE_desc = 45, 
		RULE_rpTag = 46, RULE_rpAttr = 47, RULE_rpText = 48, RULE_rpDot = 49, 
		RULE_ap = 50, RULE_document = 51, RULE_source = 52, RULE_apAttr = 53, 
		RULE_p = 54;
	public static final String[] ruleNames = {
		"xquery", "viewName", "openRootTag", "closeRootTag", "construct", "constructEmptyTag", 
		"constructString", "constructVar", "constructFlwr", "constructFlwrTerm", 
		"constructDelimeter", "constructFlwrOpenTag", "constructFlwrCloseTag", 
		"tag", "mkattr", "mkattrName", "string", "name", "aterm", "atermVar", 
		"atermString", "var", "flwr", "flwrFor", "flwrWhere", "flwrReturn", "flwrForWhere", 
		"flwrForVar", "flwrForP", "flwrWhereCond", "flwrWhereCondSome", "flwrWhereCondVar", 
		"flwrWhereCondAp", "flwrWhereCondEquality", "flwrWhereCondEqualityLeftTerm", 
		"flwrWhereCondEqualityRightTerm", "cterm", "ctermAp", "ctermVar", "ctermString", 
		"flwrReturnVar", "flwrReturnString", "flwrReturnConstruct", "rp", "child", 
		"desc", "rpTag", "rpAttr", "rpText", "rpDot", "ap", "document", "source", 
		"apAttr", "p"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "'<'", "'>'", "'{'", "'}'", "'</'", "'/>'", "','", "'['", 
		"']'", "'\"'", "'$'", "'for'", "'in'", "'where'", "'return'", "'('", "')'", 
		"'and'", "'satisfies'", "'some'", "'/'", "'//'", "'@'", "'text()'", "'.'", 
		"'document('"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "ALPHA", "BETA", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "XQuery.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class XqueryContext extends ParserRuleContext {
		public ViewNameContext viewName() {
			return getRuleContext(ViewNameContext.class,0);
		}
		public FlwrContext flwr() {
			return getRuleContext(FlwrContext.class,0);
		}
		public OpenRootTagContext openRootTag() {
			return getRuleContext(OpenRootTagContext.class,0);
		}
		public CloseRootTagContext closeRootTag() {
			return getRuleContext(CloseRootTagContext.class,0);
		}
		public XqueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xquery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterXquery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitXquery(this);
		}
	}

	public final XqueryContext xquery() throws RecognitionException {
		XqueryContext _localctx = new XqueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_xquery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			viewName();
			setState(111);
			match(T__0);
			setState(123);
			switch (_input.LA(1)) {
			case T__12:
				{
				setState(112);
				flwr();
				}
				break;
			case T__1:
				{
				setState(113);
				match(T__1);
				setState(114);
				openRootTag();
				setState(115);
				match(T__2);
				setState(116);
				match(T__3);
				setState(117);
				flwr();
				setState(118);
				match(T__4);
				setState(119);
				match(T__5);
				setState(120);
				closeRootTag();
				setState(121);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ViewNameContext extends ParserRuleContext {
		public TerminalNode ALPHA() { return getToken(XQueryParser.ALPHA, 0); }
		public ViewNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_viewName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterViewName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitViewName(this);
		}
	}

	public final ViewNameContext viewName() throws RecognitionException {
		ViewNameContext _localctx = new ViewNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_viewName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(ALPHA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpenRootTagContext extends ParserRuleContext {
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public OpenRootTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_openRootTag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterOpenRootTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitOpenRootTag(this);
		}
	}

	public final OpenRootTagContext openRootTag() throws RecognitionException {
		OpenRootTagContext _localctx = new OpenRootTagContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_openRootTag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			tag();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CloseRootTagContext extends ParserRuleContext {
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public CloseRootTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_closeRootTag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterCloseRootTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitCloseRootTag(this);
		}
	}

	public final CloseRootTagContext closeRootTag() throws RecognitionException {
		CloseRootTagContext _localctx = new CloseRootTagContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_closeRootTag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			tag();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructContext extends ParserRuleContext {
		public ConstructEmptyTagContext constructEmptyTag() {
			return getRuleContext(ConstructEmptyTagContext.class,0);
		}
		public ConstructStringContext constructString() {
			return getRuleContext(ConstructStringContext.class,0);
		}
		public ConstructVarContext constructVar() {
			return getRuleContext(ConstructVarContext.class,0);
		}
		public ConstructFlwrContext constructFlwr() {
			return getRuleContext(ConstructFlwrContext.class,0);
		}
		public ConstructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_construct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterConstruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitConstruct(this);
		}
	}

	public final ConstructContext construct() throws RecognitionException {
		ConstructContext _localctx = new ConstructContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_construct);
		try {
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				constructEmptyTag();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				constructString();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(133);
				constructVar();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				constructFlwr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructEmptyTagContext extends ParserRuleContext {
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public ConstructDelimeterContext constructDelimeter() {
			return getRuleContext(ConstructDelimeterContext.class,0);
		}
		public MkattrContext mkattr() {
			return getRuleContext(MkattrContext.class,0);
		}
		public ConstructEmptyTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructEmptyTag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterConstructEmptyTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitConstructEmptyTag(this);
		}
	}

	public final ConstructEmptyTagContext constructEmptyTag() throws RecognitionException {
		ConstructEmptyTagContext _localctx = new ConstructEmptyTagContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constructEmptyTag);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(T__1);
			setState(138);
			tag();
			setState(140);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(139);
				mkattr();
				}
			}

			setState(142);
			match(T__6);
			setState(143);
			constructDelimeter();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructStringContext extends ParserRuleContext {
		public List<TagContext> tag() {
			return getRuleContexts(TagContext.class);
		}
		public TagContext tag(int i) {
			return getRuleContext(TagContext.class,i);
		}
		public ConstructDelimeterContext constructDelimeter() {
			return getRuleContext(ConstructDelimeterContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public MkattrContext mkattr() {
			return getRuleContext(MkattrContext.class,0);
		}
		public ConstructStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructString; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterConstructString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitConstructString(this);
		}
	}

	public final ConstructStringContext constructString() throws RecognitionException {
		ConstructStringContext _localctx = new ConstructStringContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constructString);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(T__1);
			setState(146);
			tag();
			setState(148);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(147);
				mkattr();
				}
			}

			setState(150);
			match(T__2);
			setState(151);
			constructDelimeter();
			setState(152);
			string();
			setState(153);
			match(T__5);
			setState(154);
			tag();
			setState(155);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructVarContext extends ParserRuleContext {
		public List<TagContext> tag() {
			return getRuleContexts(TagContext.class);
		}
		public TagContext tag(int i) {
			return getRuleContext(TagContext.class,i);
		}
		public ConstructDelimeterContext constructDelimeter() {
			return getRuleContext(ConstructDelimeterContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public MkattrContext mkattr() {
			return getRuleContext(MkattrContext.class,0);
		}
		public ConstructVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterConstructVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitConstructVar(this);
		}
	}

	public final ConstructVarContext constructVar() throws RecognitionException {
		ConstructVarContext _localctx = new ConstructVarContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constructVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(T__1);
			setState(158);
			tag();
			setState(160);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(159);
				mkattr();
				}
			}

			setState(162);
			match(T__2);
			setState(163);
			constructDelimeter();
			setState(164);
			match(T__3);
			setState(165);
			var();
			setState(166);
			match(T__4);
			setState(167);
			match(T__5);
			setState(168);
			tag();
			setState(169);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructFlwrContext extends ParserRuleContext {
		public ConstructFlwrOpenTagContext constructFlwrOpenTag() {
			return getRuleContext(ConstructFlwrOpenTagContext.class,0);
		}
		public ConstructDelimeterContext constructDelimeter() {
			return getRuleContext(ConstructDelimeterContext.class,0);
		}
		public List<ConstructFlwrTermContext> constructFlwrTerm() {
			return getRuleContexts(ConstructFlwrTermContext.class);
		}
		public ConstructFlwrTermContext constructFlwrTerm(int i) {
			return getRuleContext(ConstructFlwrTermContext.class,i);
		}
		public ConstructFlwrCloseTagContext constructFlwrCloseTag() {
			return getRuleContext(ConstructFlwrCloseTagContext.class,0);
		}
		public MkattrContext mkattr() {
			return getRuleContext(MkattrContext.class,0);
		}
		public ConstructFlwrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructFlwr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterConstructFlwr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitConstructFlwr(this);
		}
	}

	public final ConstructFlwrContext constructFlwr() throws RecognitionException {
		ConstructFlwrContext _localctx = new ConstructFlwrContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constructFlwr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(T__1);
			setState(172);
			constructFlwrOpenTag();
			setState(174);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(173);
				mkattr();
				}
			}

			setState(176);
			match(T__2);
			setState(177);
			constructDelimeter();
			setState(178);
			constructFlwrTerm();
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(179);
				match(T__7);
				setState(180);
				constructFlwrTerm();
				}
				}
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(186);
			match(T__5);
			setState(187);
			constructFlwrCloseTag();
			setState(188);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructFlwrTermContext extends ParserRuleContext {
		public FlwrContext flwr() {
			return getRuleContext(FlwrContext.class,0);
		}
		public ConstructContext construct() {
			return getRuleContext(ConstructContext.class,0);
		}
		public ConstructFlwrTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructFlwrTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterConstructFlwrTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitConstructFlwrTerm(this);
		}
	}

	public final ConstructFlwrTermContext constructFlwrTerm() throws RecognitionException {
		ConstructFlwrTermContext _localctx = new ConstructFlwrTermContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_constructFlwrTerm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			switch (_input.LA(1)) {
			case T__3:
				{
				setState(190);
				match(T__3);
				setState(191);
				flwr();
				setState(192);
				match(T__4);
				}
				break;
			case T__1:
				{
				setState(194);
				construct();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructDelimeterContext extends ParserRuleContext {
		public ConstructDelimeterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructDelimeter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterConstructDelimeter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitConstructDelimeter(this);
		}
	}

	public final ConstructDelimeterContext constructDelimeter() throws RecognitionException {
		ConstructDelimeterContext _localctx = new ConstructDelimeterContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_constructDelimeter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructFlwrOpenTagContext extends ParserRuleContext {
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public ConstructFlwrOpenTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructFlwrOpenTag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterConstructFlwrOpenTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitConstructFlwrOpenTag(this);
		}
	}

	public final ConstructFlwrOpenTagContext constructFlwrOpenTag() throws RecognitionException {
		ConstructFlwrOpenTagContext _localctx = new ConstructFlwrOpenTagContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_constructFlwrOpenTag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			tag();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructFlwrCloseTagContext extends ParserRuleContext {
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public ConstructFlwrCloseTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructFlwrCloseTag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterConstructFlwrCloseTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitConstructFlwrCloseTag(this);
		}
	}

	public final ConstructFlwrCloseTagContext constructFlwrCloseTag() throws RecognitionException {
		ConstructFlwrCloseTagContext _localctx = new ConstructFlwrCloseTagContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_constructFlwrCloseTag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201);
			tag();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagContext extends ParserRuleContext {
		public TerminalNode ALPHA() { return getToken(XQueryParser.ALPHA, 0); }
		public TagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitTag(this);
		}
	}

	public final TagContext tag() throws RecognitionException {
		TagContext _localctx = new TagContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_tag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			match(ALPHA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MkattrContext extends ParserRuleContext {
		public List<MkattrNameContext> mkattrName() {
			return getRuleContexts(MkattrNameContext.class);
		}
		public MkattrNameContext mkattrName(int i) {
			return getRuleContext(MkattrNameContext.class,i);
		}
		public List<AtermContext> aterm() {
			return getRuleContexts(AtermContext.class);
		}
		public AtermContext aterm(int i) {
			return getRuleContext(AtermContext.class,i);
		}
		public MkattrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mkattr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterMkattr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitMkattr(this);
		}
	}

	public final MkattrContext mkattr() throws RecognitionException {
		MkattrContext _localctx = new MkattrContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_mkattr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(205);
			match(T__8);
			setState(206);
			mkattrName();
			setState(207);
			match(T__0);
			setState(208);
			aterm();
			setState(216);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(209);
				match(T__7);
				setState(210);
				mkattrName();
				setState(211);
				match(T__0);
				setState(212);
				aterm();
				}
				}
				setState(218);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(219);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MkattrNameContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public MkattrNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mkattrName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).enterMkattrName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQueryListener ) ((XQueryListener)listener).exitMkattrName(this);
		}
	}

	public final MkattrNameContext mkattrName() throws RecognitionException {
		MkattrNameContext _localctx = new MkattrNameContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_mkattrName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(221);
			name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
